<resources>
    <string name="app_name">Programming Question Bank</string>
    <string name="no_of_incorrect_attempts">No of incorrect attempts:</string>

    <string name="username">UserName</string>
    <string name="register_text">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_registred_login_me">Already registred ! Login me</string>



    <string-array name="topic_name">

        <item> View Programming Question</item>
        <item> Upload Image For Club</item>
        <item> Show Image</item>
        <item> NoteBook</item>
        <item> Calender</item>
        <item> BarCode Scanner</item>

    </string-array>


    <string-array name="topic_desc">


        <item> Click New Activity</item>
        <item> Click New Activity</item>
        <item> Click New Activity</item>
        <item> Click New Activity</item>
        <item> Click New Activity</item>
        <item> Click New Activity</item>
        <item> Click New Activity</item>

    </string-array>




     <string name="about_t">Studying in Computer Science and Engineering at Daffodil International University. Passionate about android  and ios app development. Love to build android and ios application.</string>



</resources>

