<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AdminActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etName"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bcs_shape"

            android:hint="@string/username"
            android:textColorHint="#000000"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/etpassword"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bcs_shape"

            android:hint="@string/password"
            android:textColorHint="#000000"
            android:textSize="20sp" />




        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/btnLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_fileName="r.json"
            android:layout_marginLeft="300dp"
            android:backgroundTint="#fff"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            android:layout_centerInParent="true"
            app:lottie_loop="true"/>


        <TextView
            android:id="@+id/tvinfo"
            android:layout_marginTop="9dp"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_incorrect_attempts" />


    </LinearLayout>





</LinearLayout>