<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FB689A"
    tools:context=".SudentSignUpActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/padlock"
            android:layout_gravity="center"/>


            <TextView
                android:id="@+id/back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:shadowColor="#57000000"
                android:text="@string/register_text"

                android:textColor="#000000"
                android:textSize="30sp"
                 android:drawableRight="@drawable/dbarrow"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpusernameEditTextID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name"
                    android:drawableStart="@drawable/user"
                    android:drawableLeft="@drawable/user"
                    android:textSize="18sp"
                    android:drawablePadding="7dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailEditTextID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="7dp"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUppasswordEditTextID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="7dp"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_pass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpconfirmpassEditTextID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="7dp"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_pass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>





            <Button
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/createbtn"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:id="@+id/signUpButtonID"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/signInTextViewID"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/already_registred_login_me"/>



            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarID"/>


        </LinearLayout>



    </ScrollView>



</LinearLayout>